This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Segfault in test_bigmem.ListTest.test_sort
Type: crash Stage: resolved
Components: Interpreter Core Versions: Python 3.8, Python 3.7
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: benjamin.peterson, miss-islington, serhiy.storchaka, sth, tim.peters
Priority: normal Keywords: patch, patch, patch

Created on 2018-12-31 01:16 by sth, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 11380 merged sth, 2018-12-31 01:39
PR 11380 merged sth, 2018-12-31 01:39
PR 11380 merged sth, 2018-12-31 01:39
PR 11401 merged miss-islington, 2019-01-02 02:02
Messages (4)
msg332780 - (view) Author: Stephan Hohe (sth) * Date: 2018-12-31 01:16
When running test_bigmem with -M 30G the interpreter crashes in list_sort_impl() in  Objects/listobject.c:2290 due to an integer overflow in `i`.
msg332783 - (view) Author: Stephan Hohe (sth) * Date: 2018-12-31 01:54
Actually the segfault is in Objects/listobject.c:2301 in that test since it doesn't use tuples. But the takeaway is the same: `i` overflows to a negative number and causes an invalid memory access.
msg332852 - (view) Author: Benjamin Peterson (benjamin.peterson) * (Python committer) Date: 2019-01-02 02:01
New changeset f8b534477a2a51d85ea1663530f685f805f2b247 by Benjamin Peterson (sth) in branch 'master':
closes bpo-35623: Fix integer overflow when sorting large lists (GH-11380)
https://github.com/python/cpython/commit/f8b534477a2a51d85ea1663530f685f805f2b247
msg332856 - (view) Author: miss-islington (miss-islington) Date: 2019-01-02 02:25
New changeset a5955b0895aa011b0beff1ceb6539b2ff8888425 by Miss Islington (bot) in branch '3.7':
closes bpo-35623: Fix integer overflow when sorting large lists (GH-11380)
https://github.com/python/cpython/commit/a5955b0895aa011b0beff1ceb6539b2ff8888425
History
Date User Action Args
2022-04-11 14:59:09adminsetgithub: 79804
2019-01-02 02:25:25miss-islingtonsetnosy: + miss-islington
messages: + msg332856
2019-01-02 02:02:07miss-islingtonsetpull_requests: + pull_request10782
2019-01-02 02:01:58benjamin.petersonsetstatus: open -> closed

nosy: + benjamin.peterson
messages: + msg332852

resolution: fixed
stage: patch review -> resolved
2018-12-31 06:04:24serhiy.storchakasetkeywords: patch, patch, patch
nosy: + tim.peters
2018-12-31 02:35:32xtreaksetkeywords: patch, patch, patch
nosy: + serhiy.storchaka
2018-12-31 01:54:47sthsetmessages: + msg332783
2018-12-31 01:39:10sthsetkeywords: + patch
stage: patch review
pull_requests: + pull_request10729
2018-12-31 01:39:06sthsetkeywords: + patch
stage: (no value)
pull_requests: + pull_request10728
2018-12-31 01:39:02sthsetkeywords: + patch
stage: (no value)
pull_requests: + pull_request10727
2018-12-31 01:16:28sthcreate